Re-packaging code